Fixing a bit the front-end alignments

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -25,7 +25,7 @@
     text-align: center;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 767.98px) {
     .footer-left {
         text-align: left;
     }
